<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Myproject</string>
    <string name="title_activity_main">TipCalculator</string>
    <string name="notbad">NotBad</string>
    <string name="verygood">VeryGood</string>
    <string name="excellent" tools:ignore="DuplicateDefinition">Excellent</string>
    <string name="notbad1">NotBad</string>
    <string name="verygood1">VeryGood</string>
    <string name="excellent1">Excellent</string>
    <string name="tip_amount">Tip Amount :</string>
    <string name="tipcalculator">TipCalculator</string>
    <string name="enter_your_totalbill_amount">Enter Your Totalbill Amount :</string>
    <string name="excellent2">Excellent</string>
    <string name="verygood2">VeryGood</string>
    <string name="notbad2">NotBad</string>
    <string name="apply">APPLY</string>
    <string name="number">number</string>
    <string name="way_of_treating">Way of Treating :</string>
    <string name="time_taken">Time Taken </string>
    <string name="cleaniness">Cleaniness :</string>
    <string name="enter_the_bill">Enter The Bill :</string>
    <string name="performance">Performance</string>
    <string name="hygiene">Hygiene</string>
    <string name="tips">Tips :</string>
    <string name="calculate">CALCULATE</string>
</resources>
